// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser: Should alter test database with charset utf8 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with charset utf8 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with charset utf8 3`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with charset utf8 4`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with charset utf8 5`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with charset utf8 and collation utf8_general_ci 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            },
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 3`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should alter test database with collation utf8_general_ci 4`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should create test database even when having two collate options. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_cirylic_ci"
              }
            },
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            },
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`Parser: Should create test database with collation utf8_general_ci and charset utf8 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_ALTER_DB",
        "def": {
          "database": "test",
          "meta": [
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "collation": "utf8_general_ci"
              }
            },
            {
              "id": "O_ALTER_DB_SPEC",
              "def": {
                "charset": "utf8"
              }
            }
          ]
        }
      }
    }
  ]
}
`;
